fix(rag-tui): resolve SonarQube quality gate findings in command picker